--- a/en.lproj/window.xib
+++ b/en.lproj/window.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14101" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14087.3" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14101"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14087.3"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AVRecorderDocument">
             <connections>
                 <outlet property="audioLevelMeter" destination="152" id="100263"/>
-                <outlet property="glTextureView" destination="TPz-mc-moz" id="YiE-Pe-AGl"/>
+                <outlet property="glCamView" destination="TPz-mc-moz" id="IRE-Ia-tap"/>
                 <outlet property="previewView" destination="100261" id="100266"/>
                 <outlet property="window" destination="5" id="18"/>
             </connections>
