--- a/en.lproj/window.xib
+++ b/en.lproj/window.xib
@@ -8,7 +8,7 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AVCaptureDocument">
             <connections>
-                <outlet property="glCamView" destination="TPz-mc-moz" id="IRE-Ia-tap"/>
+                <outlet property="glCamView" destination="aWw-Kd-3LJ" id="whb-T0-QwP"/>
                 <outlet property="window" destination="5" id="18"/>
             </connections>
         </customObject>
@@ -17,20 +17,91 @@
         <window title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="default" id="5" userLabel="Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="92" y="297" width="640" height="533"/>
+            <rect key="contentRect" x="92" y="297" width="640" height="499"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="878"/>
             <value key="minSize" type="size" width="640" height="480"/>
-            <view key="contentView" canDrawConcurrently="YES" id="6">
-                <rect key="frame" x="0.0" y="0.0" width="640" height="533"/>
+            <view key="contentView" canDrawConcurrently="YES" misplaced="YES" id="6">
+                <rect key="frame" x="0.0" y="0.0" width="640" height="499"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView id="100330">
-                        <rect key="frame" x="109" y="12" width="422" height="25"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <openGLView wantsLayer="YES" canDrawConcurrently="YES" misplaced="YES" useAuxiliaryDepthBufferStencil="NO" useDoubleBufferingEnabled="YES" allowOffline="YES" useRecovery="YES" wantsBestResolutionOpenGLSurface="YES" id="aWw-Kd-3LJ" customClass="OpenGLCamView">
+                        <rect key="frame" x="0.0" y="0.0" width="640" height="499"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </openGLView>
+                    <customView wantsLayer="YES" id="kaz-I7-UUI" userLabel="Top">
+                        <rect key="frame" x="-8" y="441" width="648" height="58"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <subviews>
+                            <popUpButton verticalHuggingPriority="750" imageHugsTitle="YES" id="100387">
+                                <rect key="frame" x="17" y="17" width="194" height="22"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100406">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="smallSystem"/>
+                                    <menu key="menu" title="OtherViews" id="100407"/>
+                                </popUpButtonCell>
+                                <connections>
+                                    <binding destination="-2" name="selectedObject" keyPath="capture.device" previousBinding="100427" id="100428"/>
+                                    <binding destination="-2" name="content" keyPath="capture.devices" id="100426">
+                                        <dictionary key="options">
+                                            <integer key="NSInsertsNullPlaceholder" value="1"/>
+                                        </dictionary>
+                                    </binding>
+                                    <binding destination="-2" name="contentValues" keyPath="capture.devices.localizedName" previousBinding="100426" id="100427">
+                                        <dictionary key="options">
+                                            <integer key="NSInsertsNullPlaceholder" value="1"/>
+                                        </dictionary>
+                                    </binding>
+                                </connections>
+                            </popUpButton>
+                            <popUpButton verticalHuggingPriority="750" imageHugsTitle="YES" id="100391">
+                                <rect key="frame" x="213" y="17" width="231" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100398">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="smallSystem"/>
+                                    <menu key="menu" title="OtherViews" id="100399"/>
+                                </popUpButtonCell>
+                                <connections>
+                                    <binding destination="-2" name="content" keyPath="capture.device.formats" id="100445"/>
+                                    <binding destination="-2" name="contentValues" keyPath="capture.device.formats.localizedName" previousBinding="100445" id="100451"/>
+                                    <binding destination="-2" name="selectedObject" keyPath="capture.format" previousBinding="100451" id="100460"/>
+                                </connections>
+                            </popUpButton>
+                            <popUpButton verticalHuggingPriority="750" imageHugsTitle="YES" id="100393">
+                                <rect key="frame" x="454" y="17" width="177" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
+                                <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100394">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="smallSystem"/>
+                                    <menu key="menu" title="OtherViews" id="100395"/>
+                                </popUpButtonCell>
+                                <connections>
+                                    <binding destination="-2" name="content" keyPath="capture.device.activeFormat.videoSupportedFrameRateRanges" id="100456"/>
+                                    <binding destination="-2" name="contentValues" keyPath="capture.device.activeFormat.videoSupportedFrameRateRanges.localizedName" previousBinding="100456" id="100458"/>
+                                    <binding destination="-2" name="selectedObject" keyPath="capture.framerate" previousBinding="100458" id="100464"/>
+                                </connections>
+                            </popUpButton>
+                        </subviews>
+                    </customView>
+                    <customView wantsLayer="YES" id="f40-Z0-iiP" userLabel="Bottom">
+                        <rect key="frame" x="0.0" y="0.0" width="640" height="61"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button verticalHuggingPriority="750" imageHugsTitle="YES" id="L2E-SN-zIt">
+                                <rect key="frame" x="14" y="13" width="74" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <buttonCell key="cell" type="push" title="Start" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="k8I-vN-Ma2">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="start:" target="-2" id="EKZ-81-M43"/>
+                                </connections>
+                            </button>
                             <button verticalHuggingPriority="750" imageHugsTitle="YES" id="225">
-                                <rect key="frame" x="280" y="-5" width="74" height="32"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <rect key="frame" x="552" y="13" width="74" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <buttonCell key="cell" type="push" title="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" inset="2" id="100225">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -41,66 +112,12 @@
                             </button>
                         </subviews>
                     </customView>
-                    <popUpButton verticalHuggingPriority="750" misplaced="YES" imageHugsTitle="YES" id="100387">
-                        <rect key="frame" x="17" y="502" width="194" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100406">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="smallSystem"/>
-                            <menu key="menu" title="OtherViews" id="100407"/>
-                        </popUpButtonCell>
-                        <connections>
-                            <binding destination="-2" name="selectedObject" keyPath="capture.device" previousBinding="100427" id="100428"/>
-                            <binding destination="-2" name="content" keyPath="capture.devices" id="100426">
-                                <dictionary key="options">
-                                    <integer key="NSInsertsNullPlaceholder" value="1"/>
-                                </dictionary>
-                            </binding>
-                            <binding destination="-2" name="contentValues" keyPath="capture.devices.localizedName" previousBinding="100426" id="100427">
-                                <dictionary key="options">
-                                    <integer key="NSInsertsNullPlaceholder" value="1"/>
-                                </dictionary>
-                            </binding>
-                        </connections>
-                    </popUpButton>
-                    <popUpButton verticalHuggingPriority="750" imageHugsTitle="YES" id="100391">
-                        <rect key="frame" x="213" y="502" width="231" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100398">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="smallSystem"/>
-                            <menu key="menu" title="OtherViews" id="100399"/>
-                        </popUpButtonCell>
-                        <connections>
-                            <binding destination="-2" name="content" keyPath="capture.device.formats" id="100445"/>
-                            <binding destination="-2" name="contentValues" keyPath="capture.device.formats.localizedName" previousBinding="100445" id="100451"/>
-                            <binding destination="-2" name="selectedObject" keyPath="capture.format" previousBinding="100451" id="100460"/>
-                        </connections>
-                    </popUpButton>
-                    <popUpButton verticalHuggingPriority="750" misplaced="YES" imageHugsTitle="YES" id="100393">
-                        <rect key="frame" x="446" y="502" width="177" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="100394">
-                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                            <font key="font" metaFont="smallSystem"/>
-                            <menu key="menu" title="OtherViews" id="100395"/>
-                        </popUpButtonCell>
-                        <connections>
-                            <binding destination="-2" name="content" keyPath="capture.device.activeFormat.videoSupportedFrameRateRanges" id="100456"/>
-                            <binding destination="-2" name="contentValues" keyPath="capture.device.activeFormat.videoSupportedFrameRateRanges.localizedName" previousBinding="100456" id="100458"/>
-                            <binding destination="-2" name="selectedObject" keyPath="capture.framerate" previousBinding="100458" id="100464"/>
-                        </connections>
-                    </popUpButton>
-                    <customView canDrawConcurrently="YES" misplaced="YES" id="TPz-mc-moz" customClass="OpenGLCamView">
-                        <rect key="frame" x="0.0" y="45" width="640" height="452"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </customView>
                 </subviews>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="17"/>
             </connections>
-            <point key="canvasLocation" x="-252" y="52.5"/>
+            <point key="canvasLocation" x="-252" y="35.5"/>
         </window>
     </objects>
 </document>
